[vendor] Add binaries from SimNow.

--- a/.gitignore
+++ b/.gitignore
@@ -17,15 +17,15 @@
 *.pch
 
 # Libraries
-*.lib
+# *.lib
 *.a
 *.la
 *.lo
 
 # Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
+# *.dll
+# *.so
+# *.so.*
 *.dylib
 
 # Executables
