Seeingly right first step.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_library(ctp-c ctp-c.cpp)
 
-target_include_directories (ctp-c PUBLIC ${CMAKE_SOURCE_DIR}/vendor/ctp/windows/)
+target_include_directories (ctp-c PUBLIC ${CMAKE_SOURCE_DIR}/vendor/ctp/linux/)
