--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.0.0)
 
-project(ctp-c VERSION 0.1.0 LANGUAGES CXX)
+project(ctp-c VERSION 0.1.0)
 
 include(CTest)
 enable_testing()
